--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,15 @@ body {
   font-size: 40px;
 }
 
+.slide-title {
+  color: #000000;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  text-shadow: #ffffff 0 0 2px;
+  font-size: 22px;
+  margin-top: 810px;
+}
+
 .slide a {
   position: absolute;
   top: 0;
