--- a/assets/scss/_slides.scss
+++ b/assets/scss/_slides.scss
@@ -28,6 +28,15 @@
 
   font-size: 40px;
 
+  &-title {
+    color: #000000;
+    text-align: center;
+    font-family: $font-main;
+    text-shadow: #ffffff 0 0 2px;
+    font-size: 22px;
+    margin-top: 810px;
+  }
+
   a {
     position: absolute;
     top: 0;
