--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ body {
   font-size: 40px;
 }
 
-.slide-title {
+.slide h1 {
   color: #000000;
   text-align: center;
   font-family: "Open Sans", sans-serif;
