--- a/assets/scss/_slides.scss
+++ b/assets/scss/_slides.scss
@@ -29,20 +29,18 @@
   font-size: 40px;
 
   h1 {
-    color: #000000;
-    text-align: center;
-    font-family: $font-main;
-    text-shadow: #ffffff 0 0 2px;
-    font-size: 22px;
-    margin-top: 810px;
-  }
-
-  a {
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    right: 15%;
+    bottom: 20px;
+    left: 15%;
+    z-index: 2;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #ffffff;
+    text-align: center;
+    text-shadow: #000000 0 0 3px;
+    font-family: $font-main;
+    font-size: 30px;
   }
 
   &.active {
