--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,20 +67,18 @@ body {
 }
 
 .slide h1 {
-  color: #000000;
-  text-align: center;
-  font-family: "Open Sans", sans-serif;
-  text-shadow: #ffffff 0 0 2px;
-  font-size: 22px;
-  margin-top: 810px;
-}
-
-.slide a {
   position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  right: 15%;
+  bottom: 20px;
+  left: 15%;
+  z-index: 2;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #ffffff;
+  text-align: center;
+  text-shadow: #000000 0 0 3px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 30px;
 }
 
 .slide.active {
